// Original file: inventory.proto

import type { UpdateRequestData as _inventory_UpdateRequestData, UpdateRequestData__Output as _inventory_UpdateRequestData__Output } from '../inventory/UpdateRequestData';

export interface UpdateRequest {
  'requestData'?: (_inventory_UpdateRequestData)[];
}

export interface UpdateRequest__Output {
  'requestData': (_inventory_UpdateRequestData__Output)[];
}
